# hypernevus

./: .dockerignore  .envrc  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
notebooks/: Untitled.ipynb  Untitled1.ipynb  clustering.ipynb  combine_eval_images.ipynb  loss_functions.ipynb
scripts/: build-image
springfield/: train.yaml
src/: evaluate_baseline.py  evaluate_model.py  train_baseline.py  train_model.py
src/hypernevus/: datasets.py  models.py  utils.py
