[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "hypernevus"
version = "0.1.0"
description = ""
authors = ["Thomas Johansen <thomasjo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
dask = "^2.18.0"
future = "^0.18.2"
jupyterlab = "^2.1.4"
matplotlib = "^3.2.1"
numpy = "^1.18.5"
opencv-python-headless = "^4.4.0.44"
pandas = "^1.0.4"
scikit-learn = "^0.23.1"
scipy = "^1.4.1"
spectral = "^0.21"
torchsummary = "^1.5.1"

# PyTorch is expected to be provided by container image.
torch = { version = "^1.5.0", optional = true }
torchvision = { version = "^0.6.0", optional = true }

[tool.poetry.extras]
torch = ["torch", "torchvision"]

[tool.poetry.dev-dependencies]
black = "^20.8b1"
docker = "^4.2.1"
flake8 = "^3.8.2"
flake8-black = "^0.2.0"
flake8-isort = "^3.0.0"
isort = { version = "^4.3.21", extras = ["pyproject"] }
rope = "^0.17.0"

[tool.black]
line-length = 999
target-version = ["py38"]

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 999
lines_after_import = 2
lines_between_types = 0
multi_line_output = 3
use_parentheses = true

known_pytorch = "torch, torchvision, torchsummary"
sections = "FUTURE, STDLIB, THIRDPARTY, PYTORCH, FIRSTPARTY, LOCALFOLDER"
